test/e2e/app-dir/app/app/error/ssr-error-client-component/client-component.js
'use client'

export default function Page() {
  throw new Error('Error during SSR')
}
